# Embedded-Intent-Recognizer

./: CMakeLists.txt  README.md
databases/: facts_database.txt  place_database.txt  time_database.txt  weather_database.txt
gtest/: CMakeList.txt  CMakeLists.txt  Unittests.C
headers/: EmbeddedIntentRecognizer.h
sources/: EmbeddedIntentRecognizer.C  main.C
